syntax = "proto3";

service ThermostatServer {
    rpc GetThermostat(ThermostatQuery) returns (Thermostat) {}
    rpc SetThermostat(SetThermostatRequest) returns (stream SetThermostatStatus) {}
}

message Thermostat {
    string id = 1;
    int64 tempreture = 2;
    int64 minAngle = 3;
    int64 maxAngle = 4;
    int64 minTempreture = 5;
    int64 maxTempreture = 6;
    bool isCalibrated = 7;
}

message ThermostatQuery {
    string id = 1;
}

message SetThermostatRequest {
    string id = 1;
    int64 tempreture = 2;
    string unit = 3;
}

message SetThermostatStatus {
    enum Status {
        SETTING = 0;
        WAITING = 1;
        DONE = 2;
    }
    Status status = 1;
}